@@ -2,6 +2,7 @@
 v3.0.6-git
 ----------
 
+[jan] Don't display task details of private tasks via the API (Bug #10712).
 [jan] Use correct locale when parsing quick tasks (thpo+horde@dotrc.de, Bug
       #10720).
 
